[project]
name = "yachiyo"
version = "0.1.0"
description = "Yachiyo (八千代) is an experimental AI research system designed to achieve self-iterative improvement on self-verifiable research objectives through massively scaled parallel LLM agents."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
